--- a/static/css/index.css
+++ b/static/css/index.css
@@ -1,13 +1,43 @@
-body {
-    background-image: url('../img/Test1.gif');
-    background-position: center;
-    background-size: cover;
-    overflow: hidden;
-    height: 100vh;
-    padding: 0;
-    margin: 0;
+* {
+	margin: 0;
+	padding: 0;
+	font-family: "Montserrat", sans-serif;
+	outline: red dashed 2px;
 }
 
-h1 {
-    color: red;
+html,
+body {
+	height: 100%;
+}
+
+body {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	background-image: url('../img/white-background.gif');
+	background-position: center;
+	background-size: cover;
+	overflow: hidden;
+	height: 99vh;
+}
+
+#center-card {
+	box-shadow: 0 0 50px 15px #0000007a;
+	display: flex;
+	border-radius: 25px;
+	width: 75%;
+	height: 70%;
+	align-items: center;
+	background-color: #d6d6d6d0;
+	background-repeat: no-repeat;
+	background-size: 100% 100%;
+}
+
+#profile-img {
+	background-image: url('../img/personal-picture.jpg');
+	background-position: center;
+	background-size: cover;
+	width: 20%;
+	height: 80%;
+	margin: 5% 10% 5% 5%;
 }
