--- a/static/css/index.css
+++ b/static/css/index.css
@@ -1,132 +1,141 @@
 @font-face {
-	font-family: SenticTextBlack;
-	src: url("../fonts/Sentic\ Text\ Black.otf") format("opentype");
+    font-family: SenticTextBlack;
+    src: url("../fonts/Sentic\ Text\ Black.otf") format("opentype");
 }
 
 * {
-	box-sizing: border-box;
-	margin: 0;
-	padding: 0;
-	font-family: SenticTextBlack;
-	outline: red dashed 2px;
-}
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    font-family: SenticTextBlack;
+    /* outline: red dashed 2px; */
 
-
-
-:root {
-	--main-text-color: #323232;
-	--sec-color-sub: #666666;
-	--input-focus: #2d8cf0;
-	--font-color: #323232;
-	--bg-color: #ffffff;
+    --main-text-color: #323232;
+    --sec-color-sub: #666666;
+    --card-bg-color: #d3d3d3;
+    --main-bg-color: #e8e8e8;
+    --sec-bg-color: #ffffff;
+    --input-focus: #2d8cf0;
 }
 
 body {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	background-image: url("/static/img/mainBackground.jpg");
-	background-repeat: no-repeat;
-	background-size: 100% 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--main-bg-color);
 }
 
 html,
 body {
-	height: 100%;
+    height: 100%;
 }
 
-.form {
-
-	padding: 20px;
-	background: lightgrey;
-	display: flex;
-	flex-direction: column;
-	align-items: flex-start;
-	justify-content: center;
-	gap: 20px;
-	border-radius: 5px;
-	border: 2px solid var(--main-text-color);
-	box-shadow: 4px 4px var(--main-text-color);
+#main-card {
+    background: var(--card-bg-color);
+    border: 2px solid var(--main-text-color);
+    box-shadow: 4px 4px var(--main-text-color);
+    border-radius: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    height: 65%;
+    width: 75%;
+    min-height: min-content;
+    min-width: min-content;
+    max-height: 75%;
+    max-width: 75%;
+    padding: 2%;
 }
 
-.title {
-	color: var(--font-color);
-	font-weight: 900;
-	font-size: 20px;
-	margin-bottom: 25px;
+#profile-img-wrapper {
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    flex: auto;
+    max-width: min-content;
+    max-height: min-content;
+    margin: 5%;
 }
 
-.title span {
-	color: var(--sec-color-sub);
-	font-weight: 600;
-	font-size: 17px;
+#profile-img {
+    background-image: url("../img/personal-picture.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    animation: morph 8s ease-in-out infinite;
+    border-radius: 60% 40% 30% 70% / 60% 30% 70% 40%;
+    height: 330px;
+    width: 330px;
+    transition: all 1s ease-in-out;
+    border: 4px solid var(--main-text-color);
 }
 
-.input {
-	width: 250px;
-	height: 40px;
-	border-radius: 5px;
-	border: 2px solid var(--main-text-color);
-	background-color: var(--bg-color);
-	box-shadow: 4px 4px var(--main-text-color);
-	font-size: 15px;
-	font-weight: 600;
-	color: var(--font-color);
-	padding: 5px 10px;
-	outline: none;
+@keyframes morph {
+    0% {
+        border-radius: 60% 40% 30% 70% / 60% 30% 70% 40%;
+    }
+
+    50% {
+        border-radius: 30% 60% 70% 40% / 50% 60% 30% 60%;
+    }
+
+    100% {
+        border-radius: 60% 40% 30% 70% / 60% 30% 70% 40%;
+    }
 }
 
-.input::placeholder {
-	color: var(--sec-color-sub);
-	opacity: 0.8;
+#content {
+    margin: 7% 5% 7% 2%;
 }
 
-.input:focus {
-	border: 2px solid var(--input-focus);
+#title {
+    color: var(--main-text-color);
+    font-weight: 900;
+    font-size: 2em;
+    flex: 1;
+    margin-bottom: 3%;
 }
 
-.login-with {
-	display: flex;
-	gap: 20px;
+#subtitle {
+    color: #4c4c4c;
+    font-weight: 600;
+    font-size: 1.5em;
+    flex: 1;
+    margin-bottom: 5%;
 }
 
-.button-log {
-	cursor: pointer;
-	width: 40px;
-	height: 40px;
-	border-radius: 100%;
-	border: 2px solid var(--main-text-color);
-	background-color: var(--bg-color);
-	box-shadow: 4px 4px var(--main-text-color);
-	color: var(--font-color);
-	font-size: 25px;
-	display: flex;
-	justify-content: center;
-	align-items: center;
+#desc {
+    color: var(--sec-color-sub);
+    font-weight: 600;
+    font-size: 1em;
+    margin-bottom: 5%;
 }
 
-.icon {
-	width: 24px;
-	height: 24px;
-	fill: var(--main-text-color);
+#nav-bar {
+    display: flex;
+    flex: auto;
 }
 
-.button-log:active,
-.button-confirm:active {
-	box-shadow: 0px 0px var(--main-text-color);
-	transform: translate(3px, 3px);
+#nav-bar-btn {
+    cursor: pointer;
+    width: 40px;
+    height: 40px;
+    border-radius: 100%;
+    border: 2px solid var(--main-text-color);
+    background-color: var(--sec-bg-color);
+    box-shadow: 4px 4px var(--main-text-color);
+    color: var(--main-text-color);
+    font-size: 25px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 50%;
 }
 
-.button-confirm {
-	margin: 50px auto 0 auto;
-	width: 120px;
-	height: 40px;
-	border-radius: 5px;
-	border: 2px solid var(--main-text-color);
-	background-color: var(--bg-color);
-	box-shadow: 4px 4px var(--main-text-color);
-	font-size: 17px;
-	font-weight: 600;
-	color: var(--font-color);
-	cursor: pointer;
+#icon {
+    color: var(--main-text-color);
+}
+
+#nav-bar-btn:active {
+    box-shadow: 0px 0px var(--main-text-color);
+    transform: translate(3px, 3px);
 }
