--- a/static/css/index.css
+++ b/static/css/index.css
@@ -54,45 +54,31 @@ body {
     flex: auto;
     max-width: min-content;
     max-height: min-content;
-    margin: 5%;
+    margin: 4%;
 }
 
 #profile-img {
     background-image: url("../img/personal-picture.jpg");
     background-repeat: no-repeat;
     background-size: cover;
-    animation: morph 8s ease-in-out infinite;
-    border-radius: 60% 40% 30% 70% / 60% 30% 70% 40%;
-    height: 330px;
-    width: 330px;
-    transition: all 1s ease-in-out;
-    border: 4px solid var(--main-text-color);
-}
-
-@keyframes morph {
-    0% {
-        border-radius: 60% 40% 30% 70% / 60% 30% 70% 40%;
-    }
-
-    50% {
-        border-radius: 30% 60% 70% 40% / 50% 60% 30% 60%;
-    }
-
-    100% {
-        border-radius: 60% 40% 30% 70% / 60% 30% 70% 40%;
-    }
+    height: 300px;
+    width: 300px;
+    box-shadow: 4px 4px var(--main-text-color);
+    border: 2px solid var(--main-text-color);
+    border-radius: 50%;
 }
 
 #content {
     margin: 7% 5% 7% 2%;
+    padding-top: 4%;
 }
 
 #title {
     color: var(--main-text-color);
     font-weight: 900;
-    font-size: 2em;
+    font-size: 2.2em;
     flex: 1;
-    margin-bottom: 3%;
+    margin-bottom: 5%;
 }
 
 #subtitle {
@@ -101,6 +87,7 @@ body {
     font-size: 1.5em;
     flex: 1;
     margin-bottom: 5%;
+    min-height: fit-content;
 }
 
 #desc {
