--- a/static/css/index.css
+++ b/static/css/index.css
@@ -87,7 +87,6 @@ body {
     font-size: 1.5em;
     flex: 1;
     margin-bottom: 5%;
-    min-height: fit-content;
 }
 
 #desc {
@@ -125,4 +124,16 @@ body {
 #nav-bar-btn:active {
     box-shadow: 0px 0px var(--main-text-color);
     transform: translate(3px, 3px);
+}
+
+#overlay {
+    height: 0%;
+    width: 100%;
+    position: fixed;
+    z-index: 1;
+    bottom: 0;
+    left: 0;
+    background-color: #000000e6;
+    overflow-x: hidden;
+    transition: 0.7s ease-in-out;
 }
