--- a/static/css/index.css
+++ b/static/css/index.css
@@ -3,6 +3,16 @@ body {
     height: 100%;
 }
 
+:root {
+    --main-text-color: #323232;
+    --sec-text-color: #666666;
+    --card-bg-color: #d3d3d3;
+    --third-bg-color: #e8e8e8;
+    --sec-bg-color: #ffffff;
+    --input-focus: #2d8cf0;
+    --main-bg-color: #006060;
+}
+
 #home-main-card {
     background: var(--card-bg-color);
     border: 2px solid var(--main-text-color);
@@ -63,7 +73,7 @@ body {
 }
 
 #home-desc {
-    color: var(--sec-color-sub);
+    color: var(--sec-text-color);
     font-weight: 600;
     font-size: 1em;
     margin-bottom: 5%;
@@ -74,7 +84,7 @@ body {
     flex: auto;
 }
 
-#home-nav-bar-btn {
+.home-nav-bar-btn {
     cursor: pointer;
     width: 40px;
     height: 40px;
@@ -92,15 +102,29 @@ body {
     transition: transform 0.1s ease;
 }
 
-#home-icon {
+.home-icons {
     color: var(--main-text-color);
 }
 
-#home-nav-bar-btn:active {
+.home-nav-bar-btn:active {
     box-shadow: 0px 0px var(--main-text-color);
     transform: translate(3px, 3px);
 }
 
-#home-nav-bar-btn:hover {
+.home-nav-bar-btn:hover {
     transform: translateY(-0.25em);
+}
+
+#home-social-icon-container {
+    display: flex;
+    flex: auto;
+}
+
+.home-social-icon {
+    margin: 1% 1.3%;
+    transition: transform 0.1s ease;
+}
+
+.home-social-icon:hover {
+    transform: translateY(-0.1em);
 }
