--- a/static/css/index.css
+++ b/static/css/index.css
@@ -4,13 +4,18 @@ body {
 }
 
 :root {
-    --main-text-color: #323232;
-    --sec-text-color: #666666;
-    --card-bg-color: #d3d3d3;
-    --third-bg-color: #e8e8e8;
-    --sec-bg-color: #ffffff;
-    --input-focus: #2d8cf0;
-    --main-bg-color: #006060;
+    --main-text-color: #323232; /* black  #c8c4bd*/
+    --card-border-color: #323232; /* black  #7c7365*/
+    --card-shadow-color: #323232; /* black  #26292a*/
+    --subtitle-text-color: #4c4c4c; /* black  #b8b2a9*/
+    --important-normal-text-color: #505050; /* black  #bcb7ae*/
+    --normal-text-color: #666666; /* black  #a8a095*/
+    --icons-color: #323232; /* black  #c8c4bd*/
+    --card-bg-color: #d3d3d3; /* black  #313537*/
+    --main-bg-color: #006060; /* black  #004d4d*/
+    --sec-bg-color: #ffffff; /* ! black  #c8c4bd*/
+    --third-bg-color: #e8e8e8; /* black  #25282a*/
+    --btn-bg-color: #2d8cf0; /* ! black  #c8c4bd*/
 }
 
 #home-main-card {
@@ -65,7 +70,7 @@ body {
 }
 
 #home-subtitle {
-    color: #4c4c4c;
+    color: var(--subtitle-text-color);
     font-weight: 600;
     font-size: 1.5em;
     flex: 1;
