--- a/static/css/shared.css
+++ b/static/css/shared.css
@@ -12,13 +12,18 @@
 }
 
 :root {
-    --main-text-color: #323232;
-    --sec-text-color: #666666;
-    --card-bg-color: #d3d3d3;
-    --third-bg-color: #e8e8e8;
-    --sec-bg-color: #ffffff;
-    --input-focus: #2d8cf0;
-    --main-bg-color: #006060;
+    --main-text-color: #323232; /* black  #c8c4bd*/
+    --card-border-color: #323232; /* black  #7c7365*/
+    --card-shadow-color: #323232; /* black  #26292a*/
+    --subtitle-text-color: #4c4c4c; /* black  #b8b2a9*/
+    --important-normal-text-color: #505050; /* black  #bcb7ae*/
+    --normal-text-color: #666666; /* black  #a8a095*/
+    --icons-color: #323232; /* black  #c8c4bd*/
+    --card-bg-color: #d3d3d3; /* black  #313537*/
+    --main-bg-color: #006060; /* black  #004d4d*/
+    --sec-bg-color: #ffffff; /* ! black  #c8c4bd*/
+    --third-bg-color: #e8e8e8; /* black  #25282a*/
+    --btn-bg-color: #2d8cf0; /* ! black  #c8c4bd*/
 }
 
 body {
@@ -60,4 +65,98 @@ body {
 
 ::-webkit-scrollbar-thumb {
     background-color: var(--main-text-color);
+}
+
+#toggle-theme-container {
+    position: absolute;
+    top: 0;
+    margin: 4%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+#toggler-label {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 30px;
+    width: 50px;
+    height: 20px;
+    cursor: pointer;
+}
+
+#toggler-input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+
+#toggler-slider {
+    box-sizing: border-box;
+    border-radius: 5px;
+    border: 2px solid var(--main-text-color);
+    box-shadow: 4px 4px var(--main-text-color);
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: var(--third-bg-color);
+    transition: 0.3s;
+}
+
+#toggler-state::before {
+    position: absolute;
+    content: "Light";
+    left: -55px;
+    top: 0;
+    width: 100px;
+    text-decoration: underline;
+    color: var(--main-text-color);
+}
+
+#toggler-state::after {
+    position: absolute;
+    content: "Dark";
+    left: 65px;
+    top: 0;
+    width: 100px;
+    text-decoration: none;
+    color: var(--main-text-color);
+}
+
+#toggler-slider:before {
+    box-sizing: border-box;
+    position: absolute;
+    content: "";
+    height: 20px;
+    width: 20px;
+    border: 2px solid var(--main-text-color);
+    border-radius: 5px;
+    left: -2px;
+    bottom: 2px;
+    background-color: var(--sec-bg-color);
+    box-shadow: 0 3px 0 var(--main-text-color);
+    transition: 0.3s;
+}
+
+#toggler-input:checked + #toggler-slider {
+    background-color: var(--btn-bg-color);
+}
+
+#toggler-input:checked + #toggler-slider:before {
+    transform: translateX(30px);
+}
+
+#toggler-input:checked ~ #toggler-state:before {
+    text-decoration: none;
+}
+
+#toggler-input:checked ~ #toggler-state:after {
+    text-decoration: underline;
 }
