--- a/static/css/shared.css
+++ b/static/css/shared.css
@@ -12,18 +12,18 @@
 }
 
 :root {
-    --main-text-color: #323232; /* black  #c8c4bd*/
-    --card-border-color: #323232; /* black  #7c7365*/
-    --card-shadow-color: #323232; /* black  #26292a*/
-    --subtitle-text-color: #4c4c4c; /* black  #b8b2a9*/
-    --important-normal-text-color: #505050; /* black  #bcb7ae*/
-    --normal-text-color: #666666; /* black  #a8a095*/
-    --icons-color: #323232; /* black  #c8c4bd*/
-    --card-bg-color: #d3d3d3; /* black  #313537*/
-    --main-bg-color: #006060; /* black  #004d4d*/
-    --sec-bg-color: #ffffff; /* ! black  #c8c4bd*/
-    --third-bg-color: #e8e8e8; /* black  #25282a*/
-    --btn-bg-color: #2d8cf0; /* ! black  #c8c4bd*/
+    --main-text-color: #323232;
+    --card-border-color: #323232;
+    --card-shadow-color: #323232;
+    --subtitle-text-color: #4c4c4c;
+    --important-normal-text-color: #505050;
+    --normal-text-color: #666666;
+    --icons-color: #323232;
+    --card-bg-color: #d3d3d3;
+    --main-bg-color: #006060;
+    --sec-bg-color: #ffffff;
+    --third-bg-color: #e8e8e8;
+    --btn-bg-color: #2d8cf0;
 }
 
 body {
@@ -54,7 +54,7 @@ body {
 }
 
 ::-webkit-scrollbar-track {
-    border: 1px solid var(--main-text-color);
+    border: 1px solid var(--card-border-color);
     background-color: var(--card-bg-color);
 }
 
@@ -98,8 +98,8 @@ body {
 #toggler-slider {
     box-sizing: border-box;
     border-radius: 5px;
-    border: 2px solid var(--main-text-color);
-    box-shadow: 4px 4px var(--main-text-color);
+    border: 2px solid var(--card-border-color);
+    box-shadow: 4px 4px var(--card-shadow-color);
     position: absolute;
     cursor: pointer;
     top: 0;
@@ -136,12 +136,12 @@ body {
     content: "";
     height: 20px;
     width: 20px;
-    border: 2px solid var(--main-text-color);
+    border: 2px solid var(--card-border-color);
     border-radius: 5px;
     left: -2px;
     bottom: 2px;
     background-color: var(--sec-bg-color);
-    box-shadow: 0 3px 0 var(--main-text-color);
+    box-shadow: 0 3px 0 var(--card-bg-color);
     transition: 0.3s;
 }
 
