--- a/static/css/about.css
+++ b/static/css/about.css
@@ -11,11 +11,13 @@
     --sec-bg-color: #ffffff;
     --third-bg-color: #e8e8e8;
     --btn-bg-color: #2d8cf0;
+    --overlay-text-color: #d3d3d3;
 }
+
 #about-main-card {
     background: var(--card-bg-color);
-    border: 2px solid var(--main-text-color);
-    box-shadow: 4px 4px var(--main-text-color);
+    border: 2px solid var(--card-border-color);
+    box-shadow: 4px 4px var(--card-shadow-color);
     border-radius: 5px;
     display: flex;
     flex-direction: column;
