Added New Color Variable

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -16,6 +16,7 @@ body {
     --sec-bg-color: #ffffff;
     --third-bg-color: #e8e8e8;
     --btn-bg-color: #2d8cf0;
+    --overlay-text-color: #d3d3d3;
 }
 
 #home-main-card {
