--- a/static/css/shared.css
+++ b/static/css/shared.css
@@ -24,6 +24,7 @@
     --sec-bg-color: #ffffff;
     --third-bg-color: #e8e8e8;
     --btn-bg-color: #2d8cf0;
+    --overlay-text-color: #d3d3d3;
 }
 
 body {
@@ -48,7 +49,7 @@ body {
     justify-content: center;
     font-weight: 1000;
     font-size: 10em;
-    color: var(--card-bg-color);
+    color: var(--overlay-text-color);
     mix-blend-mode: multiply;
     overflow: hidden;
 }
