--- a/static/css/about.css
+++ b/static/css/about.css
@@ -22,7 +22,7 @@
     display: flex;
     flex-direction: column;
     height: 1000px;
-    width: 90%;
+    width: 65%;
     min-height: min-content;
     min-width: min-content;
     max-height: 100%;
@@ -81,4 +81,52 @@
 .about-knowledge-item,
 .about-interests-item {
     text-align: center;
+}
+
+#about-nav-bar {
+    display: flex;
+    flex: auto;
+    position: absolute;
+    top: 1;
+    right: 0;
+    margin: 0% 6.5%;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+    border: 2px solid var(--card-border-color);
+    background-color: var(--card-bg-color);
+    box-shadow: 4px 4px var(--card-shadow-color);
+    padding: 10px;
+}
+
+.about-nav-bar-btn {
+    cursor: pointer;
+    width: 40px;
+    height: 40px;
+    border-radius: 100%;
+    border: 2px solid var(--card-border-color);
+    background-color: var(--third-bg-color);
+    box-shadow: 4px 4px var(--card-shadow-color);
+    color: var(--third-bg-color);
+    font-size: 25px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 10% 0;
+}
+
+#first.about-nav-bar-btn,
+#second.about-nav-bar-btn,
+#third.about-nav-bar-btn {
+    margin-bottom: 50%;
+}
+
+#last.about-nav-bar-btn {
+    margin-top: 50%;
+}
+
+.about-nav-bar-btn:active {
+    box-shadow: 0px 0px var(--card-shadow-color);
+    transform: translate(3px, 3px);
 }
