--- a/static/css/shared.css
+++ b/static/css/shared.css
@@ -161,3 +161,7 @@ body {
 #toggler-input:checked ~ #toggler-state:after {
     text-decoration: underline;
 }
+
+.icons {
+    color: var(--icons-color);
+}
