--- a/static/css/index.css
+++ b/static/css/index.css
@@ -79,7 +79,7 @@ body {
 }
 
 #home-desc {
-    color: var(--sec-text-color);
+    color: var(--normal-text-color);
     font-weight: 600;
     font-size: 1em;
     margin-bottom: 5%;
@@ -104,21 +104,11 @@ body {
     justify-content: center;
     align-items: center;
     margin-bottom: 50%;
-    transform: translateY(-0.2em);
-    transition: transform 0.1s ease;
-}
-
-.home-icons {
-    color: var(--icons-color);
 }
 
 .home-nav-bar-btn:active {
     box-shadow: 0px 0px var(--card-shadow-color);
     transform: translate(3px, 3px);
-}
-
-.home-nav-bar-btn:hover {
-    transform: translateY(-0.25em);
 }
 
 #home-social-icon-container {
