--- a/static/css/about.css
+++ b/static/css/about.css
@@ -37,7 +37,7 @@
     color: var(--main-text-color);
     font-weight: 900;
     font-size: 5em;
-    margin: 3% 0% 10%;
+    margin: 4% 0%;
     text-align: center;
 }
 
@@ -167,4 +167,98 @@
 #to-top-btn.show {
     opacity: 1;
     visibility: visible;
+}
+
+#about-div-2 {
+    display: grid;
+    grid-template-columns: 1fr 0.2fr 1fr;
+}
+
+#about-div-2-title {
+    color: var(--subtitle-text-color);
+    font-size: 1.8em;
+    text-align: center;
+    margin-bottom: 0.5%;
+}
+
+#about-programming-skills,
+#about-soft-skills {
+    display: flex;
+    flex-direction: column;
+}
+
+#about-programming-skills-title,
+#about-soft-skills-title {
+    color: var(--subtitle-text-color);
+    font-size: 1.8em;
+    margin: 15px 0px 25px;
+    text-align: center;
+}
+
+.about-programming-skills-item,
+.about-soft-skills-item {
+    color: var(--important-normal-text-color);
+    font-size: 1em;
+    margin: 7px 0px;
+    text-align: justify;
+    text-align-last: justify;
+}
+
+.about-programming-skills-item::before,
+.about-soft-skills-item::after {
+    content: ".";
+    display: inline-block;
+    width: 100%;
+    height: 0;
+    visibility: hidden;
+}
+
+.about-programming-skills-progress {
+    text-align: right;
+
+    display: inline-block;
+}
+
+.progress-bar {
+    background: var(--card-bg-color);
+    border: 1.5px solid var(--card-border-color);
+    border-radius: 5px;
+    width: 100%;
+}
+
+.progress-bar-progress {
+    background-color: var(--btn-bg-color);
+    height: 2px;
+    width: 1%;
+}
+
+hr {
+    border: 0;
+    height: 1px;
+    margin: 6% 0%;
+    background-image: -moz-linear-gradient(
+        left,
+        var(--card-bg-color),
+        var(--card-border-color),
+        var(--card-bg-color)
+    );
+    background-image: -ms-linear-gradient(
+        left,
+        var(--card-bg-color),
+        var(--card-border-color),
+        var(--card-bg-color)
+    );
+
+    background-image: -o-linear-gradient(
+        left,
+        var(--card-bg-color),
+        var(--card-border-color),
+        var(--card-bg-color)
+    );
+    background-image: -webkit-linear-gradient(
+        left,
+        var(--card-bg-color),
+        var(--card-border-color),
+        var(--card-bg-color)
+    );
 }
