--- a/static/css/about.css
+++ b/static/css/about.css
@@ -22,7 +22,7 @@
     display: flex;
     flex-direction: column;
     height: 2000px;
-    width: 75%;
+    width: 90%;
     min-height: min-content;
     min-width: min-content;
     max-height: 100%;
@@ -84,89 +84,37 @@
 }
 
 #about-nav-bar {
-    display: flex;
-    flex: auto;
-    position: absolute;
-    top: 32.5%;
-    right: 0;
-    margin: 0% 4%;
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
-    border-bottom-left-radius: 10px;
-    border-bottom-right-radius: 10px;
-    border: 2px solid var(--card-border-color);
-    background-color: var(--card-bg-color);
-    box-shadow: 4px 4px var(--card-shadow-color);
-    padding: 10px;
+    display: inline-block;
+    position: fixed;
+    top: 50%;
+    transform: translateY(-50%);
+    right: 30px;
+    background-color: var(--main-bg-color);
 }
 
 .about-nav-bar-btn {
     cursor: pointer;
-    width: 40px;
-    height: 40px;
+    width: 50px;
+    height: 50px;
     border-radius: 100%;
     border: 2px solid var(--card-border-color);
     background-color: var(--third-bg-color);
-    box-shadow: 4px 4px var(--card-shadow-color);
+    box-shadow: 3px 3px var(--card-shadow-color);
     color: var(--third-bg-color);
     font-size: 25px;
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 10% 0;
+    margin: 30% 0;
 }
 
-#first.about-nav-bar-btn,
-#second.about-nav-bar-btn,
-#third.about-nav-bar-btn {
-    margin-bottom: 50%;
-}
-
-#last.about-nav-bar-btn {
-    margin-top: 50%;
+#to-top-btn {
+    margin-bottom: 0%;
 }
 
 .about-nav-bar-btn:active {
     box-shadow: 0px 0px var(--card-shadow-color);
     transform: translate(3px, 3px);
-}
-
-#to-top-btn {
-    border-radius: 5px;
-    border: 2px solid var(--main-text-color);
-    background-color: var(--third-bg-color);
-    box-shadow: 4px 4px var(--main-text-color);
-    color: var(--font-color);
-    cursor: pointer;
-    text-align: center;
-    display: inline-block;
-    width: 50px;
-    height: 50px;
-    position: fixed;
-    bottom: 30px;
-    right: 30px;
-    transition: background-color 0.3s, opacity 0.5s, visibility 0.5s;
-    opacity: 0;
-    visibility: hidden;
-    z-index: 1000;
-}
-
-#to-top-btn::after {
-    content: "\f0a6";
-    font-family: FontAwesome;
-    font-size: 2em;
-    line-height: 50px;
-    color: var(--main-text-color);
-}
-
-#to-top-btn:active {
-    box-shadow: 0px 0px var(--main-text-color);
-    transform: translate(3px, 3px);
-}
-
-#to-top-btn.show {
-    opacity: 1;
-    visibility: visible;
 }
 
 #about-div-2 {
