--- a/static/css/index.css
+++ b/static/css/index.css
@@ -17,6 +17,7 @@ body {
     --third-bg-color: #e8e8e8;
     --btn-bg-color: #2d8cf0;
     --overlay-text-color: #d3d3d3;
+    --glow-color: #1f62a8;
 }
 
 #home-main-card {
