--- a/static/css/shared.css
+++ b/static/css/shared.css
@@ -25,6 +25,7 @@
     --third-bg-color: #e8e8e8;
     --btn-bg-color: #2d8cf0;
     --overlay-text-color: #d3d3d3;
+    --glow-color: #1f62a8;
 }
 
 body {
