--- a/static/css/shared.css
+++ b/static/css/shared.css
@@ -26,8 +26,8 @@
     --btn-bg-color: #2d8cf0;
     --overlay-text-color: #d3d3d3;
     --glow-color: #1f62a8;
+    --footer-bg-color: #d3d3d3d0;
 }
-
 body {
     display: flex;
     justify-content: center;
