--- a/static/css/about.css
+++ b/static/css/about.css
@@ -41,6 +41,7 @@
     font-size: 5em;
     margin: 3% 0%;
     text-align: center;
+    -webkit-text-stroke: 2px var(--sec-bg-color);
 }
 
 #about-div-1 {
