--- a/static/css/projects.css
+++ b/static/css/projects.css
@@ -16,25 +16,30 @@
     --footer-bg-color: #d3d3d3d0;
 }
 
+body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
 #projects-footer {
     position: fixed;
     left: 0;
     bottom: 0;
     width: 100%;
     background-color: var(--footer-bg-color);
-    color: white;
-    text-align: center;
     height: 11%;
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
+    border-top: 1px solid var(--card-border-color);
 }
 
 #projects-nav-bar {
     display: grid;
     grid-gap: 18px;
-
     grid-template-columns: repeat(5, 1fr);
     justify-items: center;
 }
@@ -64,6 +69,77 @@
     -webkit-text-stroke: 2px var(--main-text-color);
     font-weight: 900;
     font-size: 5em;
-    margin: 7% 0%;
+    margin: 7% 0% 6% 0%;
     text-align: center;
+}
+
+#projects-projects-container {
+    width: 90%;
+    height: min-content;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    gap: 30px;
+}
+
+.projects-projects {
+    background: var(--card-bg-color);
+    border: 2px solid var(--card-border-color);
+    box-shadow: 4px 4px var(--card-shadow-color);
+    border-radius: 5px;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    height: 300px;
+}
+
+.projects-projects-thumbnail {
+    width: 100%;
+    height: 80%;
+    border-top-left-radius: 2px;
+    border-top-right-radius: 3px;
+    background-image: url("../img/d8a2a5010e704497920af4f8943e5b13O4sIhaeZr880U5wh-0.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    cursor: pointer;
+    border-bottom: 2px solid var(--card-border-color);
+}
+
+.projects-projects-thumbnail:hover {
+    background-image: url("../img/giphy.gif");
+}
+
+.projects-projects-desc {
+    width: 100%;
+    height: 20%;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    justify-items: center;
+    align-items: center;
+}
+
+.projects-projects-desc-title {
+    color: var(--subtitle-text-color);
+    font-size: 1.1em;
+    margin: 0px 0px 5px;
+}
+
+.projects-projects-desc-btn {
+    cursor: pointer;
+    width: 35px;
+    height: 35px;
+    border-radius: 100%;
+    border: 2px solid var(--card-border-color);
+    background-color: var(--third-bg-color);
+    box-shadow: 3px 3px var(--card-shadow-color);
+    color: var(--third-bg-color);
+    font-size: 23px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.projects-projects-desc-btn:active {
+    box-shadow: 0px 0px var(--card-shadow-color);
+    transform: translate(3px, 3px);
 }
