--- a/static/css/index.css
+++ b/static/css/index.css
@@ -1,23 +1,24 @@
+:root {
+    --main-text-color: #c8c4bd;
+    --card-border-color: #7c7365;
+    --card-shadow-color: #26292a;
+    --subtitle-text-color: #b8b2a9;
+    --important-normal-text-color: #bcb7ae;
+    --normal-text-color: #a8a095;
+    --icons-color: #c8c4bd;
+    --card-bg-color: #313537;
+    --main-bg-color: #004d4d;
+    --sec-bg-color: #181a1b;
+    --third-bg-color: #25282a;
+    --btn-bg-color: #0c5bae;
+    --overlay-text-color: #ffffff;
+    --glow-color: #6caff5;
+    --footer-bg-color: #313537d0;
+}
+
 html,
 body {
     height: 100%;
-}
-
-:root {
-    --main-text-color: #323232;
-    --card-border-color: #323232;
-    --card-shadow-color: #323232;
-    --subtitle-text-color: #4c4c4c;
-    --important-normal-text-color: #505050;
-    --normal-text-color: #666666;
-    --icons-color: #323232;
-    --card-bg-color: #d3d3d3;
-    --main-bg-color: #006060;
-    --sec-bg-color: #ffffff;
-    --third-bg-color: #e8e8e8;
-    --btn-bg-color: #2d8cf0;
-    --overlay-text-color: #d3d3d3;
-    --glow-color: #1f62a8;
 }
 
 #home-main-card {
@@ -65,7 +66,6 @@ body {
 
 #home-title {
     color: var(--main-text-color);
-    font-weight: 900;
     font-size: 2.2em;
     flex: 1;
     margin-bottom: 5%;
@@ -73,7 +73,6 @@ body {
 
 #home-subtitle {
     color: var(--subtitle-text-color);
-    font-weight: 600;
     font-size: 1.5em;
     flex: 1;
     margin-bottom: 5%;
@@ -81,7 +80,6 @@ body {
 
 #home-desc {
     color: var(--normal-text-color);
-    font-weight: 600;
     font-size: 1em;
     margin-bottom: 5%;
 }
