--- a/static/css/index.css
+++ b/static/css/index.css
@@ -68,25 +68,27 @@ body {
     color: var(--main-text-color);
     font-size: 2.2em;
     flex: 1;
-    margin-bottom: 5%;
+    margin-bottom: 3%;
 }
 
 #home-subtitle {
     color: var(--subtitle-text-color);
     font-size: 1.5em;
     flex: 1;
-    margin-bottom: 5%;
+    margin-bottom: 3%;
+    height: 1em;
 }
 
 #home-desc {
     color: var(--normal-text-color);
     font-size: 1em;
-    margin-bottom: 5%;
+    margin-bottom: 3%;
 }
 
 #home-nav-bar {
     display: flex;
     flex: auto;
+    overflow: visible;
 }
 
 .home-nav-bar-btn {
@@ -96,9 +98,9 @@ body {
     border-radius: 100%;
     border: 2px solid var(--card-border-color);
     background-color: var(--third-bg-color);
-    box-shadow: 4px 4px var(--card-shadow-color);
+    filter: drop-shadow(3px 3px var(--card-shadow-color));
     color: var(--third-bg-color);
-    font-size: 25px;
+    font-size: 21.5px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -106,8 +108,8 @@ body {
 }
 
 .home-nav-bar-btn:active {
-    box-shadow: 0px 0px var(--card-shadow-color);
-    transform: translate(3px, 3px);
+    filter: drop-shadow(0px 0px var(--card-shadow-color));
+    transform: translate(2px, 2px);
 }
 
 #home-social-icon-container {
