--- a/static/css/projects.css
+++ b/static/css/projects.css
@@ -52,7 +52,7 @@ body {
     border-radius: 100%;
     border: 2px solid var(--card-border-color);
     background-color: var(--third-bg-color);
-    box-shadow: 3px 3px var(--card-shadow-color);
+    filter: drop-shadow(3px 3px var(--card-shadow-color));
     color: var(--third-bg-color);
     font-size: 25px;
     display: flex;
@@ -61,31 +61,32 @@ body {
 }
 
 .projects-nav-bar-btn:active {
-    box-shadow: 0px 0px var(--card-shadow-color);
-    transform: translate(3px, 3px);
+    filter: drop-shadow(0px 0px var(--card-shadow-color));
+    transform: translate(2px, 2px);
 }
 
 #projects-title {
     color: var(--card-bg-color);
     -webkit-text-stroke: 2px var(--main-text-color);
     font-size: 5em;
-    margin: 7% 0% 6% 0%;
+    margin: 6.5% 0% 5% 0%;
     text-align: center;
 }
 
 #projects-projects-container {
     width: 90%;
-    height: 1400px;
+    height: fit-content;
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(4, 1fr);
-    gap: 40px;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    gap: 50px;
+    margin-bottom: 8%;
 }
 
 .projects-projects {
     background: var(--card-bg-color);
     border: 2px solid var(--card-border-color);
-    box-shadow: 4px 4px var(--card-shadow-color);
+    filter: drop-shadow(3px 3px var(--card-shadow-color));
     border-radius: 5px;
     display: flex;
     justify-content: center;
@@ -95,7 +96,7 @@ body {
 
 .projects-projects-thumbnail {
     width: 100%;
-    height: 80%;
+    height: 60%;
     border-top-left-radius: 2px;
     border-top-right-radius: 3px;
     background-image: url("../img/d8a2a5010e704497920af4f8943e5b13O4sIhaeZr880U5wh-0.jpg");
@@ -111,9 +112,10 @@ body {
 
 .projects-projects-desc {
     width: 100%;
-    height: 20%;
+    height: 40%;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 1fr);
     justify-items: center;
     align-items: center;
 }
@@ -131,7 +133,7 @@ body {
     border-radius: 100%;
     border: 2px solid var(--card-border-color);
     background-color: var(--third-bg-color);
-    box-shadow: 3px 3px var(--card-shadow-color);
+    filter: drop-shadow(3px 3px var(--card-shadow-color));
     color: var(--third-bg-color);
     font-size: 23px;
     display: flex;
@@ -140,11 +142,19 @@ body {
 }
 
 .projects-projects-desc-btn:active {
-    box-shadow: 0px 0px var(--card-shadow-color);
-    transform: translate(3px, 3px);
+    filter: drop-shadow(0px 0px var(--card-shadow-color));
+    transform: translate(2px, 2px);
 }
 
 .projects-projects-desc-tech-stack {
     color: var(--normal-text-color);
     font-size: 0.9em;
+}
+
+.projects-projects-desc-desc {
+    color: var(--normal-text-color);
+    font-size: 0.85em;
+    grid-column: span 3;
+    padding: 0% 2% 3.5%;
+    text-align: center;
 }
