Styling - Changed some margin sizes

--- a/static/css/projects.css
+++ b/static/css/projects.css
@@ -156,5 +156,6 @@ body {
     font-size: 0.85em;
     grid-column: span 3;
     padding: 0% 2% 3.5%;
+    line-height: 1.2;
     text-align: center;
 }
