--- a/static/css/index.css
+++ b/static/css/index.css
@@ -68,21 +68,21 @@ body {
     color: var(--main-text-color);
     font-size: 2.2em;
     flex: 1;
-    margin-bottom: 3%;
+    margin-bottom: 15px;
 }
 
 #home-subtitle {
-    color: var(--subtitle-text-color);
+    color: var(--important-normal-text-color);
     font-size: 1.5em;
     flex: 1;
-    margin-bottom: 3%;
+    margin-bottom: 15px;
     height: 1em;
 }
 
 #home-desc {
     color: var(--normal-text-color);
     font-size: 1em;
-    margin-bottom: 3%;
+    margin-bottom: 15px;
 }
 
 #home-nav-bar {
@@ -118,16 +118,21 @@ body {
 }
 
 .home-social-icon {
-    margin: 1% 1.3%;
+    margin: 1% 2% 1% 0%;
     transition: transform 0.1s ease;
 }
 
-#home-cv-logo {
-    color: var(--main-text-color);
-    font-size: 1.6em;
+#home-cv-logo-img {
     transition: transform 0.1s ease;
+    width: 45px;
+    transform: translateY(0.23em);
+    margin-left: -0.5%;
 }
 
 .home-social-icon:hover {
     transform: translateY(-0.1em);
+}
+
+#home-cv-logo-img:hover {
+    transform: translateY(-0em);
 }
