Add - Input bg color

--- a/static/css/about.css
+++ b/static/css/about.css
@@ -14,6 +14,7 @@
     --overlay-text-color: #ffffff;
     --glow-color: #6caff5;
     --footer-bg-color: #313537d0;
+    --input-bg-color: #dddddd;
 }
 
 #about-main-card {
