--- a/static/css/shared.css
+++ b/static/css/shared.css
@@ -27,7 +27,9 @@
     --overlay-text-color: #ffffff;
     --glow-color: #6caff5;
     --footer-bg-color: #313537d0;
+    --input-bg-color: #dddddd;
 }
+
 body {
     display: flex;
     justify-content: center;
